--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Bienvenidos a Hyperblog</title>
+        <title>Bienvenidos a Hyperblog 2.0 como estan</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
