cabecera fooder terminado

--- a/blogpost.html
+++ b/blogpost.html
@@ -16,8 +16,8 @@
                 <p>Suscribete y dale like</p>
             </div>
 	    <div id="footer">
-		    Hecho con amor platzi
+		    Hecho con amor platzi❤️
 		</div>
         </div>
     </body>
-</html>
+</html> 
