--- a/blogpost.html
+++ b/blogpost.html
@@ -18,7 +18,7 @@
               <p>Suscribete y dale like</p>
             </div>
 	    <div id="footer">
-		    Hecho acon amor platzi❤️
+		    Hecho con amor platzi❤️
 		</div>
         </div>
     </body>
