--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Hyperblog 2.0 es un blog del futuro</title>
+        <title>MI BLOG</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
@@ -8,11 +8,12 @@
             <div id="cabecera">
                 <img id="logo" src="imagenes/dragon.png" />
                 Hyperblog
-                <span id="tagline">Tu blog de confianza</span>
+                <span id="tagline">Este es mi primer proyecto</span>
             </div>
             <div id="post">
-                <h1>Este es el título atractivo e interesante del post</h1>
-                <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>
+                <h1>Quien es Brandon Bonilla??</h1>
+                <p>Brandon Bonilla es un joven de 16 años, ya termino el bachillerato actualemnte esta estudiando en platzi programacion
+                     <br>Le gustaria aprender sobre backend y se esta esforzando para conseguirlo</p>
                 <p><img src="mifoto.jpg" width="100%"></p>
               <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
               <p>Suscribete y dale like</p>
