--- a/blogpost.html
+++ b/blogpost.html
@@ -7,18 +7,21 @@
         <div id="container">
             <div id="cabecera">
                 <img id="logo" src="imagenes/dragon.png" />
-                Hyperblog
+                Mi historia
                 <span id="tagline">Este es mi primer proyecto</span>
             </div>
             <div id="post">
                 <h1>Quien es Brandon Bonilla??</h1>
                 <p>Brandon Bonilla es un joven de 16 años, ya termino el bachillerato actualemnte esta estudiando en platzi programacion
                      <br>Le gustaria aprender sobre backend y se esta esforzando para conseguirlo</p>
-              <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
-              <p>Suscribete y dale like</p>
+              <p>Brandon ha estado en diferentes paises como lo son japon, mexico, salvador, panama y puerto rico... ha Brandon
+              le gusta mucho estudiar y espera algun dia ser un gran programador </p>
+              <p>Intentare mantener este blog actualizado atrabes del tiempo</p>
+              <p>Este pequeño proyecto lo pueden encontara en mi cuenta de github (brabob-b)</p>
+              <p>Ultima actualizacion: 4/24/2022</p>
             </div>
 	    <div id="footer">
-		    Hecho con amor platzi❤️
+		    Sere un gran programador
 		</div>
         </div>
     </body>
